# zipper

./: .gitmodules  CMakeLists.txt  README.md
source/: CMakeLists.txt  consensus.c  meshops.c  polyfile.c
src/App/: CMakeLists.txt
src/App/source/: zipper.c  zipper.cpp
src/Runtime/: CMakeLists.txt
src/Runtime/Zipper/: clip.cpp  fill.cpp  intersect.cpp  mesh.c  mesh.cpp  meshops.cpp  meshops.h  ply_wrapper.cpp  ply_wrapper.h  polyfile.cpp  remove.cpp  triangulate.c  triangulate.cpp  zipper.h
src/Vendors/: CMakeLists.txt
